<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:minWidth="320dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/create_account"
            android:textColor="@color/signupColor"
            android:textSize="24sp"
            android:textStyle="bold">


        </TextView>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/email"
            android:textColor="@color/login_text_color"
            android:textSize="16sp"
            android:textStyle="bold">


        </TextView>

        <EditText
            android:id="@+id/et_username_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="24dp"
            android:textColor="@color/black"
            android:hint="@string/email"
           >

        </EditText>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/password_tv"
            android:textColor="@color/login_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
           >

        </TextView>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
         >

        </EditText>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btt_sign_up"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/login_button_gradient"
            android:text="@string/sign_up">

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

</androidx.cardview.widget.CardView>