<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/login_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#FC67E0F8"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textColor="@color/login_text_color"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:text="@string/username"
                android:textColor="@color/login_text_color"
                android:textSize="16sp"
                android:textStyle="bold">


            </TextView>

            <EditText
                android:id="@+id/et_username_or_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                android:hint="@string/email_username_hint"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:text="@string/password_tv"
                android:textColor="@color/login_text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck">

            </TextView>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

            </EditText>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/login_text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck">

            </TextView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_login"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:background="@drawable/login_button_gradient"
                android:text="@string/login">

            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:id="@+id/tv_do_you_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="90dp"
                android:text="@string/sign_up_questions"
                android:textColor="@color/login_text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck">

            </TextView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>