<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:orientation="vertical"
    tools:context=".screens.getStarted.GetStartedFragment">


    <ImageView
        android:id="@+id/iv_notes_logo"
        android:layout_width="220dp"
        android:layout_height="320dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="64dp"
        android:src="@drawable/notes" />

    <TextView
        android:id="@+id/tv_daily_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/daily_notes"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/tv_overview_get_started"
        android:textColor="@color/text_grey_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btt_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimaryDark"
        android:backgroundTintMode="src_in"
        android:layout_marginTop="24dp"
        android:background="@drawable/get_started_btt_round_corners"
        android:text="@string/get_started" />
</LinearLayout>